--- a/FindMe.Web.Bo/wwwroot/css/app/admin/csv.css
+++ b/FindMe.Web.Bo/wwwroot/css/app/admin/csv.css
@@ -10,6 +10,10 @@
     border-color: #d6e9c6;
 }
 
+#bulkimportVw #panelCat.panel {
+    margin-bottom: 10px !important;
+}
+
 #bulkimportVw #csv-form span {
     font-size: 16px;
     margin: 0 10px;
