--- a/FindMe.Web.Bo/wwwroot/Views/App/Admin/BulkImport.html
+++ b/FindMe.Web.Bo/wwwroot/Views/App/Admin/BulkImport.html
@@ -113,7 +113,7 @@
         </button>
 
         <div class="pull-right">
-            <a href="" class="btn btn-lg btn-danger" ng-click="vm.download(vm.log.text)" ng-hide="vm.log.text == ''">
+            <a href="" class="btn btn-lg btn-danger" ng-click="vm.download(vm.log.row)">
                 Download Log
             </a>
         </div>
